Improve permission and access interface
