# lib/models/permissions.js
@@ -13,7 +13,17 @@ async function init () {
 }
 
 async function create (
-  { thingId, scopes, entityId, owner, affordances },
+  {
+    thingId,
+    scopes,
+    entityId,
+    entityName,
+    owner,
+    properties,
+    actions,
+    events,
+    immutable
+  },
   { session } = {}
 ) {
   const db = await connect()
@@ -21,9 +31,13 @@ async function create (
     {
       thingId,
       entityId,
+      entityName,
       scopes,
       owner,
-      affordances: affordances || []
+      immutable,
+      properties: properties || [],
+      actions: actions || [],
+      events: events || []
     },
     { session }
   )
@@ -33,7 +47,7 @@ async function remove (id, { session } = {}) {
   const db = await connect()
   const { result } = await db
     .collection(collectionName)
-    .deleteOne({ id }, { session })
+    .deleteOne({ id, immutable: false }, { session })
   return result.ok === 1 && result.n > 0
 }
 
@@ -48,7 +62,14 @@ async function deleteMany (thingId, { session } = {}) {
   return result.ok === 1 && result.n > 0
 }
 
-async function checkPermissions ({ thingId, entityId, scope, affordance }) {
+async function checkPermissions ({
+  thingId,
+  entityId,
+  scope,
+  properties,
+  actions,
+  events
+}) {
   const db = await connect()
   return Boolean(
     await db.collection(collectionName).findOne(
@@ -56,8 +77,14 @@ async function checkPermissions ({ thingId, entityId, scope, affordance }) {
         thingId,
         entityId,
         scopes: scope,
-        ...(affordance && {
-          $or: [{ affordances: affordance }, { affordances: '*' }]
+        ...(properties && {
+          $or: [{ properties }, { properties: '*' }]
+        }),
+        ...(actions && {
+          $or: [{ actions }, { actions: '*' }]
+        }),
+        ...(events && {
+          $or: [{ events }, { events: '*' }]
         })
       },
       { projection: { _id: 1 } }
@@ -77,8 +104,21 @@ async function hasDeletePermissions ({ thingId, entityId }) {
   return checkPermissions({ thingId, scope: 'delete', entityId })
 }
 
-async function hasInvokePermissions ({ thingId, affordance, entityId }) {
-  return checkPermissions({ thingId, scope: 'invoke', entityId, affordance })
+async function hasInvokePermissions ({
+  thingId,
+  properties,
+  actions,
+  events,
+  entityId
+}) {
+  return checkPermissions({
+    thingId,
+    scope: 'invoke',
+    entityId,
+    properties,
+    actions,
+    events
+  })
 }
 
 async function findOne ({ entityId, thingId }) {
@@ -120,9 +160,11 @@ async function find ({ thingIds, scope, owner }) {
           _id: 0,
           id: '$_id',
           thingId: 1,
-          entityId: 1,
+          entityName: 1,
           scopes: 1,
-          affordances: 1
+          properties: 1,
+          actions: 1,
+          events: 1
         }
       }
     )
