# lib/routes/permissions.js
@@ -14,12 +14,7 @@ async function get (req, res, next) {
 
 async function post (req, res, next) {
   try {
-    await req.services.permissions.insert(
-      req.body.resource,
-      req.body.requester,
-      req.body.scope,
-      req.auth.access_token
-    )
+    await req.services.permissions.insert(req.body, req.auth.access_token)
     res.send('OK')
   } catch (e) {
     next(e)
